# ika

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  doc.md  ika
.github/workflows/: ci.yml
cmake/: RunPreprocessorTest.cmake  RunTest.cmake
editor/nino/: ika.json
editor/vim/ftdetect/: ika.vim
editor/vim/syntax/: ika.vim
editor/vscode/ika-syntax/: package.json
editor/vscode/ika-syntax/syntaxes/: ika.tmLanguage.json
example/: bf.ika  fibonacci.calc  libc.ika  narcissistic.calc  prime.calc  test_1.ika  test_2.ika
examples/: bf.ika  fibonacci.ika  libc.ika  narcissistic.ika  prime.ika
lib/: libc.ika
src/: arena.c  arena.h  ast.h  codegen.c  codegen.h  common.h  error.c  error.h  lexer.c  lexer.h  main.c  opt.h  parser.c  parser.h  preprocessor.c  preprocessor.h  sema.c  sema.h  source.h  str.h  symbol_table.c  symbol_table.h  type.c  type.h  utils.c  utils.h  vm.c  vm.h
src/utl/: utl.c  utl.h  utldef.h  utlvector.h
src/utl/allocator/: utlallocator.h  utlarena.h  utlfixedbuf.h  utlstackfallback.h
tests/: testall
tests/array/: test0.ika  test1.ika  test2.ika  test2.txt  test3.ika  test3.txt  test4.ika  test4.txt  test5.ika  test5.txt  test6.ika  test7.ika  test7.txt  test8.ika  test8.txt  test9.ika  test9.txt
tests/basic/: test0.ika  test0.txt  test1.ika  test2.ika  test3.ika  test4.ika  test5.ika  test6.ika  test7.ika  test7.txt  test8.ika  test8.txt
tests/control-flow/: test0.ika  test1.ika  test10.ika  test10.txt  test2.ika  test2.txt  test3.ika  test4.ika  test5.ika  test6.ika  test7.ika  test8.ika  test8.txt  test9.ika
tests/enum/: test0.ika  test0.txt  test1.ika  test2.ika  test3.ika  test3.txt  test4.ika
tests/function/: test0.ika  test0.txt  test1.ika  test2.ika  test3.ika  test4.ika  test5.ika  test5.txt  test6.ika  test6.txt  test7.ika  test7.txt
tests/pointer/: test0.ika  test1.ika  test2.ika  test3.ika  test4.ika  test5.ika  test5.txt  test6.ika  test6.txt  test7.ika  test8.ika  test8.txt  test9.ika  test9.txt
tests/preprocessor/: test0.ika  test0.txt  test1.ika  test2.ika  test2.txt  test3.ika  test3.txt  test4.ika  test5.ika  test6.ika  test6.txt  test7.ika  test8.ika  test8.txt  test9.ika  test9.txt
tests/struct/: test0.ika  test1.ika  test10.ika  test2.ika  test3.ika  test4.ika  test5.ika  test6.ika  test6.txt  test7.ika  test7.txt  test8.ika  test9.ika  test9.txt
